# Assignment-1-GAIA

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
prototyping/: dbconnection_pycog2.ipynb  metrics.ipynb  tool_access.py
scripts/: architecure_diagram.py
scripts/terraform/: sql.tf
src/: GAIA.py  main.py  metrics.py
src/data_layer/: data_access.py  models.py
src/pages/: 1_LLM_Prompting.py  2_Dashboard.py  LLM_Prompting.py
src/utils/: gpt.py  tools.py
