[tool.poetry]
name = "assignment-1-gaia"
version = "0.1.0"
description = ""
authors = ["suryaMadhav16 <rebbapragada.s@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
pandas = "^2.2.3"
openai = "^1.47.0"
jupyter = "^1.1.1"
psycopg2-binary = "^2.9.9"
datasets = "^3.0.0"
mlcroissant = "^1.0.8"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
